@@ -1,11 +1,9 @@
 # Tcl package index file, version 1.1
 # This file was generated by hand.
 # 
-# It invokes the "package ifneeded" command to set up package-related
-# information so that packages will be loaded automatically in response
-# to "package require" commands.  When this script is sourced, the
-# variable $dir must contain the full path name of this file's
-# directory.
+# This file is used by makefile.vc until that properly auto-generates it.
+# pkgIndex.tcl.in is used instead of configure-based builds.
+# Keep in sync with pkgIndex.tcl.in until this goes away.
 
 # We don't really want to throw an error with older versions of
 # Tcl, they should just ignore us.
